🐞fix: header title not wrapping and  font-size  a little to big

--- a/src/components/Project/Details/Details.module.css
+++ b/src/components/Project/Details/Details.module.css
@@ -1,116 +1,121 @@
 /* TODO fix list item  icon */
 .container {
-    display: flex;
-    flex-flow: column;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 3.2rem;
-    overflow-x: hidden;
-    color: var(--body-color);
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 3.2rem;
+  overflow-x: hidden;
+  color: var(--body-color);
 }
 
 .paper {
-    background-color: var(--bg-color) !important;
+  background-color: var(--bg-color) !important;
 }
 
 .container h1 {
-    font-size: 2.08rem;
+  font-size: 2.08rem;
 }
 
 .container p,
 .container span {
-    font-size: 1.6rem;
-    font-weight: 600;
+  font-size: 1.6rem;
+  font-weight: 600;
 }
 
 .header {
-    display: flex;
-    position: relative;
-    justify-content: flex-end;
+  display: flex;
+  position: relative;
+  justify-content: flex-end;
 }
 
 .header-title {
-    flex: 1;
-    margin: 0 auto !important;
-    display: flex;
-    justify-content: center;
+  flex: 1 !important;
+  margin: 0 auto !important;
+  display: flex;
+  justify-content: center;
 }
 
 .header-title > h2 {
-    font-weight: 764;
-    font-size: 2.4rem;
-    color: var(--body-color);
+  font-weight: 764;
+  font-size: 2.4rem;
+  color: var(--body-color);
+  text-align: center;
 }
 
 .paper h2:first-letter,
 .paper h1:first-letter {
-    color: var(--color-accent-dark);
+  color: var(--color-accent-dark);
 }
 
 .icon-button {
-    color: var(--text-color-light);
-    background-color: var(--bg-color-ternary);
-    margin-right: 2rem;
+  color: var(--text-color-light);
+  background-color: var(--bg-color-ternary);
+  margin-right: 2rem;
 }
 
 .close-icon {
-    font-size: 2.5rem !important;
+  font-size: 2.5rem !important;
 }
 
 .slideShow-container {
-    flex: 1;
+  flex: 1;
 }
 
 .details-project {
-    margin-top: 0.64rem;
-    align-self: flex-start;
-    width: 100%;
+  margin-top: 0.64rem;
+  align-self: flex-start;
+  width: 100%;
 }
 
 .details-project p {
-    margin: 2rem 0;
+  margin: 2rem 0;
 }
 
 .details-project h1 {
-    position: relative;
-    margin: 2rem 0;
+  position: relative;
+  margin: 2rem 0;
 }
 
 .details-project ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .details-project li {
-    display: flex;
-    align-items: center;
-    color: var(--body-color);
+  display: flex;
+  align-items: center;
+  color: var(--body-color);
 }
 
 .details-project li svg {
-    color: var(--color-accent-dark);
-    min-height: 1.6rem;
-    min-width: 1.6rem;
-    margin-right: 0.5rem;
+  color: var(--color-accent-dark);
+  min-height: 1.6rem;
+  min-width: 1.6rem;
+  margin-right: 0.5rem;
 }
-
+@media (max-width: 346px) {
+  .header-title > h2 {
+    font-size: 1.6rem;
+  }
+}
 @media (min-width: 768px) {
-    .container {
-        flex-flow: row;
-    }
+  .container {
+    flex-flow: row;
+  }
 
-    .slideShow-container {
-        max-width: 960px;
-        align-self: flex-start;
-        margin-right: 3.2rem;
-        flex: 1;
-    }
+  .slideShow-container {
+    max-width: 960px;
+    align-self: flex-start;
+    margin-right: 3.2rem;
+    flex: 1;
+  }
 
-    .details-project {
-        flex: 1;
-        margin-top: 0;
-    }
+  .details-project {
+    flex: 1;
+    margin-top: 0;
+  }
 
-    .details-project h1:nth-child(1) {
-        margin: 0 0 2rem 0;
-    }
+  .details-project h1:nth-child(1) {
+    margin: 0 0 2rem 0;
+  }
 }
